--- a/build.common.gradle
+++ b/build.common.gradle
@@ -55,8 +55,8 @@ android {
         signingConfig signingConfigs.debug
         applicationId 'com.qualcomm.ftcrobotcontroller'
         minSdkVersion 24
-        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
+        multiDexEnabled true
 
         /**
          * We keep the versionCode and versionName of robot controller applications in sync with
@@ -93,6 +93,7 @@ android {
             signingConfig signingConfigs.release
 
             ndk {
+                //noinspection ChromeOsAbiSupport
                 abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
@@ -100,6 +101,7 @@ android {
             debuggable true
             jniDebuggable true
             ndk {
+                //noinspection ChromeOsAbiSupport
                 abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
